--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <body background="https://scontent.fktm16-1.fna.fbcdn.net/v/t39.30808-6/395600542_122101112060093710_7040976911807490148_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=5f2048&_nc_ohc=RNgJKYQz8MQAX_r2NHQ&_nc_ht=scontent.fktm16-1.fna&oh=00_AfBiAYrmhidm1EkMpNd0RKQlXqN70FpGMJ9xcQxfwg3J2Q&oe=65435DE6" >
 	<h3 align="Right">
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;
-		<img src="https://o.remove.bg/downloads/32b798cc-76e8-440f-9a4e-8bbf9736a9c8/123-removebg-preview.png"width="40px">
+		<img src="https://photos.app.goo.gl/DctKxh8vMGEy14269"width="40px">
 	 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	 <img src="https://o.remove.bg/downloads/9cc748ac-92da-4f36-9449-d10d94739bf4/321-removebg-preview.png" width="40px" > &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	 <img src="https://o.remove.bg/downloads/04c3af82-6d8e-49b6-9ab8-1f2c0aa491ff/57667-removebg-preview.png" width="40px"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	&nbsp;
-	<img src="https://o.remove.bg/downloads/3bb14e55-be48-4972-80d7-c3e33bccf5cc/search-removebg-preview.png" width="40px">
+	 <img src="https://photos.app.goo.gl/SVh8SLTsuMBPzKfA9" width="40px" > &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	 <img src="https://photos.app.goo.gl/jCksnaobqLTqmmho9" width="40px"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	&nbsp;
+	<img src="https://photos.app.goo.gl/3YkB6aavUnUqwULV6" width="40px">
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<font face="cinzel" size="5">
@@ -21,7 +21,7 @@
 		</font>
 	 </h3>
 	  <h2 align="center">
-     <br><br><br><br><br><img src="https://o.remove.bg/uploads/a3ea22df-c547-4f11-a843-970a7c0d7479/logo.png" width="100px"height="100px"></img>
+     <br><br><br><br><br><img src="https://photos.app.goo.gl/vU3ibRawaY91KHkJA" width="100px"height="100px"></img>
 	
 	<br>
    <font face="Lato" color="black"><a href="https://sudeepdeve.github.io/Contents/">GET STARTED</a></font>
