--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <body background="https://scontent.fktm16-1.fna.fbcdn.net/v/t39.30808-6/395600542_122101112060093710_7040976911807490148_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=5f2048&_nc_ohc=RNgJKYQz8MQAX_r2NHQ&_nc_ht=scontent.fktm16-1.fna&oh=00_AfBiAYrmhidm1EkMpNd0RKQlXqN70FpGMJ9xcQxfwg3J2Q&oe=65435DE6" >
 	<h3 align="Right">
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;
-		<img src="https://photos.app.goo.gl/DctKxh8vMGEy14269"width="40px">
+		<img src=""width="40px">
 	 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	 <img src="https://photos.app.goo.gl/SVh8SLTsuMBPzKfA9" width="40px" > &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	 <img src="" width="40px" > &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	 <img src="https://photos.app.goo.gl/jCksnaobqLTqmmho9" width="40px"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	&nbsp;
 	<img src="https://photos.app.goo.gl/3YkB6aavUnUqwULV6" width="40px">
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
@@ -21,7 +21,7 @@
 		</font>
 	 </h3>
 	  <h2 align="center">
-     <br><br><br><br><br><img src="https://photos.app.goo.gl/vU3ibRawaY91KHkJA" width="100px"height="100px"></img>
+     <br><br><br><br><br><img src="https://photos.google.com/share/AF1QipPF0_uxfrZSC-zYtlFrMjY7oBqBQLjln-x95WTNTN8dakSXnsGjbKRIBTHzSPAfsQ/photo/AF1QipPTmP9v5a80-eP2uyGJMXrK9i8X8Qn8-gFY82YW?key=TEdRVU52cmtzS3pKTzRKai1CWHo2WV80YnFEYjR3" width="100px"height="100px"></img>
 	
 	<br>
    <font face="Lato" color="black"><a href="https://sudeepdeve.github.io/Contents/">GET STARTED</a></font>
