--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <nav>
         <a href="https://sudeepdeve.github.io/Homepage-/">Home</a>
         <a href="#">Book</a>
-        <a href="#">About Us</a>
+        <a href="https://sudeepdeve.github.io/About-Page-/">About Us</a>
         <a href="https://sudeepdeve.github.io/help/">Help</a>
     </nav>
     <div class="container">
