--- a/index.html
+++ b/index.html
@@ -65,13 +65,24 @@
     .content {
         padding: 20px;
     }
-    .chingum{
-          margin: 0 auto;
-          width: 140px;
-          height: 28px;
-          border: 2px snow;
-          background-color: blue;
-    }
+    .chingum {
+      display: inline-block;
+      padding: 10px 20px;
+      font-size: 16px;
+      font-weight: bold;
+      text-align: center;
+      text-decoration: none;
+      cursor: pointer;
+      border: 2px solid #3498db;
+      color: #3498db;
+      background-color: #fff;
+      border-radius: 5px;
+      transition: background-color 0.3s, color 0.3s;
+  }
+  .chingum:hover {
+      background-color: #3498db;
+      color: #fff;
+  }
 </style>
   </head>
 <body >
@@ -113,7 +124,7 @@
         <br><br>
          <center>
          <div class="chingum">
-          <a href="https://sudeepdeve.github.io/Contents/"><Font color="white" size="5px">Get Started</Font></a>
+          <a href="https://sudeepdeve.github.io/Contents/">Get Started</a>
          </div>
          </center>
     </div>
