--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   </head>
 <body >
     <header>
-        <h1>Welcome to Computer Workshop of 8848</h1>
+        <h1>Welcome to Explore Sudeep</h1>
         <p>“There are no secrets to success. It is the result of preparation, hard work, and learning from failure.”</p>
     </header>
 <nav>
