--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 
+
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -226,7 +228,7 @@ body{
             <li><a href="https://www.facebook.com/sudeep.lamichhane.946/"><i class = "fab fa-facebook-f"></i></a></li>
         
             <li><a href="https://github.com/Sudeepdeve" target="_blank"><i class="fab fa-github"></i></a></li>
-
+            <li><a href="https://github.com/Sudeepdeve" target="_blank"><i class="fa fa-download"></i></a></li>
             
           </ul>
         </div>
@@ -261,7 +263,6 @@ body{
           </p>
         </div>
       </div>
-    </div>
-
+    </div>  
   </body>
 </html>
