--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ body{
         <div class = "about-btns">
             <a href="https://sudeepdeve.github.io/sqc-brainstroming/"><button  type = "button" class = "btn btn-pink">Introduction</button></a>
             <a href="https://sudeepdeve.github.io/sqteamc-/"><button type = "button" class = "btn btn-white">About</button></a>
-            <a href="https://sudeepdeve.github.io/Indentification-of-problem-/"><button  type = "button" class = "btn btn-pink">Identification Of problem</button></a>
+            <a href="https://sudeepdeve.github.io/Milestone-chart-/"><button  type = "button" class = "btn btn-pink">Milestone-Chart</button></a>
         </div>
 
         <div class = "about-para">
