--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ body{
         </div>
 
         <div class = "about-para">
-          <p>"Quality is a Journey,not a destination." </p>
+          <p>"SQC to empower,enhance and elevate young minds." </p>
         <br>
         <h5>Visitor Counter</h5>
         <!-- hitwebcounter Code START -->
