--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ body{
           <div>
             <div class = "shadow">
               <div class = "about-img">
-                <img src = "logo.webp" alt = "about image">
+                <img src = "logo.JPG" alt = "about image">
               </div>
             </div>
 
